<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChangePassword"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:id="@+id/mmn"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@+id/title"
        android:layout_height="1dp"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/message"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mmn"
        android:layout_marginTop="10dp"
        android:text="@string/YourRegisterNumberis"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/message"
        android:layout_height="wrap_content"
         android:id="@+id/otpTextLayout"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/numberuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:text="85858585855"
             android:paddingRight="@dimen/_10sdp"
             android:singleLine="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorHint="@color/back_bg"
            android:textSize="26sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/otpTextLayout"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/rect"
        android:visibility="gone"
         android:id="@+id/otpTextLayoutnumber"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/newnumberuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
             android:fontFamily="sans-serif"
            android:inputType="number"
            android:text=""
            android:maxLength="10"
            android:hint="Enter new mobile number."
             android:paddingRight="@dimen/_10sdp"
             android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/back_bg"
            android:textSize="18sp"
            android:textStyle="normal" />


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mmmmmm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otpTextLayoutnumber"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/SendOTPtochangepassword"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mmmmmm"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:text="@string/SendOTP" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelButton"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mmmmmm"
        android:layout_marginTop="20dp"
        android:text="@string/Cancel" />
</RelativeLayout>