<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewAll.View_Detail_four_Activity">



    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:id="@+id/horizantal"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorBackground"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="150dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:text="@string/Status"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"/>


                        <View
                            android:background="@color/white"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>


                        <TextView
                            android:layout_width="180dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:text="@string/Date"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"/>


                        <View
                            android:background="@color/white"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>


                        <TextView
                            android:layout_width="150dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:text="@string/SiteOwnerName"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"/>

                        <View
                            android:background="@color/white"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>



                        <TextView
                            android:layout_width="150dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:text="   Owner Mobile"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"/>


                        <View
                            android:background="@color/white"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>


                        <TextView
                            android:layout_width="150dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:text="@string/District"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"/>


                        <View
                            android:background="@color/white"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="150dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:text="@string/SiteType"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"/>


                        <View
                            android:background="@color/white"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="150dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:text="@string/SiteAddress"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"/>

                        <View
                            android:background="@color/white"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="180dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:text="    Site Starting"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"/>

                        <View
                            android:background="@color/white"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="150dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:text="@string/Remark"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"/>

                        <View
                            android:background="@color/white"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_below="@+id/soft"
                        android:id="@+id/recycler_view"
                        tools:context="example.javatpoint.com.recyclerviewlist.MainActivity"/>



                </LinearLayout>




            </HorizontalScrollView>



        </LinearLayout>

    </ScrollView>



    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/image"
        android:visibility="gone"
        android:gravity="center"
        android:layout_height="match_parent"
        android:padding="@dimen/_15sdp"
        android:layout_gravity="center"
        android:src="@drawable/nodatafoundbanner"/>

</LinearLayout>