<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".Dashbord.ui.RequesttechexpressActivity">

    <include layout="@layout/toolbar"
        android:visibility="gone"
        android:id="@+id/toolbar"/>


   <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:background="@color/white"
       android:paddingLeft="@dimen/_10sdp"
       android:paddingRight="@dimen/_10sdp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:orientation="vertical">




       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Date"
           android:layout_marginTop="@dimen/_5sdp"
           android:layout_marginBottom="@dimen/_2sdp"
           android:textSize="15dp"

           android:textColor="@color/black"
           android:layout_gravity="left"
           android:layout_marginLeft="2dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/rect"
           android:layout_marginTop="5dp">

           <EditText
               android:id="@+id/selectdate"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
               android:focusable="false"
               android:hint="@string/Date"
               android:fontFamily="sans-serif"
               android:inputType="number"
               android:paddingLeft="16.3dp"
               android:paddingTop="9.7dp"
               android:paddingRight="@dimen/_10sdp"
               android:paddingBottom="9.7dp"
               android:singleLine="true"
               android:textColor="@color/black"
               android:textColorHint="@color/back_bg"
               android:textSize="15dp"
               android:textStyle="normal" />

       </LinearLayout>





       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Time"
           android:layout_marginTop="@dimen/_10sdp"
           android:layout_marginBottom="@dimen/_2sdp"
           android:textSize="15dp"

           android:textColor="@color/black"
           android:layout_gravity="left"
           android:layout_marginLeft="2dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/rect"
           android:layout_marginTop="5dp">

           <EditText
               android:id="@+id/time"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
               android:focusable="false"
               android:hint="@string/Time"
               android:fontFamily="sans-serif"
               android:inputType="number"
               android:paddingLeft="16.3dp"
               android:paddingTop="9.7dp"
               android:paddingRight="@dimen/_10sdp"
               android:paddingBottom="9.7dp"
               android:singleLine="true"
               android:textColor="@color/black"
               android:textColorHint="@color/back_bg"
               android:textSize="15dp"
               android:textStyle="normal" />

       </LinearLayout>


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ContactPersonName"
           android:layout_marginTop="@dimen/_10sdp"
           android:layout_marginBottom="@dimen/_2sdp"
           android:textSize="15dp"
           android:textColor="@color/black"
           android:layout_gravity="left"
           android:layout_marginLeft="2dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/rect"
           android:layout_marginTop="5dp">

           <EditText
               android:id="@+id/personName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
               android:hint="@string/ContactPersonName"
                android:fontFamily="sans-serif"
                android:paddingLeft="16.3dp"
               android:paddingTop="9.7dp"
               android:paddingRight="@dimen/_10sdp"
               android:paddingBottom="9.7dp"
               android:singleLine="true"
               android:textColor="@color/black"
               android:textColorHint="@color/back_bg"
               android:textSize="15dp"
               android:textStyle="normal" />

       </LinearLayout>


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ContactPersonMobileNumber"
           android:layout_marginTop="@dimen/_10sdp"
           android:layout_marginBottom="@dimen/_2sdp"
           android:textSize="15dp"

           android:textColor="@color/black"
           android:layout_gravity="left"
           android:layout_marginLeft="2dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/rect"
           android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="5dp">

           <EditText
               android:id="@+id/MobileNumber"
               android:hint="@string/ContactPersonMobileNumber"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@null"
                android:fontFamily="sans-serif"
               android:inputType="number"
               android:paddingLeft="16.3dp"
               android:paddingTop="9.7dp"
               android:maxLength="10"
               android:paddingRight="@dimen/_10sdp"
               android:paddingBottom="9.7dp"
               android:singleLine="true"
               android:textColor="@color/black"
               android:textColorHint="@color/back_bg"
               android:textSize="15dp"
               android:textStyle="normal" />

       </LinearLayout>

       <Button
           android:layout_width="match_parent"
           android:layout_height="44dp"
           android:id="@+id/bt_submit"
           android:textSize="17sp"
           android:layout_marginTop="@dimen/_16sdp"
           android:background="@drawable/roundbtn"
           android:backgroundTint="@color/colorPrimary"
           android:layout_marginLeft="@dimen/_20sdp"
           android:layout_marginRight="@dimen/_20sdp"
           android:gravity="center"
           android:layout_marginBottom="@dimen/_10sdp"
           android:fontFamily="sans-serif"
           android:textStyle="normal"
           android:textColor="@color/white"
           android:text="@string/Submit"
           android:layout_alignParentBottom="true"/>
   </LinearLayout>




</RelativeLayout>